Fix gap between FAQ and sponsors sections

--- a/css/main.css
+++ b/css/main.css
@@ -176,11 +176,12 @@ section {
 
 #faq {
     top: -1px;
-    height: 189%;
+    height: 200%;
     background-image: url('../img/faqBG.png');
     background-position-y: top;
     background-size: cover;
     z-index: 100;
+    margin-bottom: -3rem;
 }
 
 #faqTitle {
@@ -278,6 +279,7 @@ span {
 /* Sponsors section */
 
 #sponsors {
+    top: -50;
     height: auto;
     width: 100%;
     background-image: url('../img/sponsorsBG.png');
